i've do the change that you gave(class name; font size; move style)

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 .profile {
     font-style: italic;
+    font-weight: 300;
+    font-size: 20px;
     color: rgb(235, 82, 5);
     background-color: azure;
     width: 700px;
@@ -7,12 +9,11 @@
     border-style: solid;
     border-color: aqua;
 
-    h1 {
-        color: rgb(5, 82, 235);
-        font-weight: 3300;
-    }
-}
 
-.profile > h1 {
+.a{
+    font-size: 25px;
+    color: blue;
+    background-color: lightyellow;
+}
 
 }
