--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.Hosea_intro_con {
+.hosea_intro_con {
     background-color: aqua;
     width: 600px;
     border-color: blueviolet;
@@ -6,8 +6,8 @@
     border-width: 30px;
 }
 
-.Hosea_link {
+.hosea_link {
     background-color: rgb(18, 255, 160);
-    width: 200px;
+   
     
 }
