--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 
 .container {
-    background-color: white; 
+    background-color:aqua ; 
     width: 70%;              
     border: 2px solid #333;  
 }
