--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 .bello {
     background-color: bisque;
     width: 800px;
-    border-style:solid;
-    border-width: 3px;
-    border-color:blueviolet;
+    border:solid 3px blueviolet;
 }
 
 .bello a {
