I edit the font weight and change my link background color in style.css

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
  .darren_intro_con {
     background-color :rgb(234, 87, 234);
     width:1000px;
-    border-style: solid;
-    border-width: 5px;
-    border-color:blueviolet
-    
+    border:blueviolet solid 5px;
+}
+.darren_intro_con a {
+    color:rgb(98, 11, 220)
 }
