--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 .bello {
     background-color: bisque;
     width: 800px;
-    border:solid 3px blueviolet;
+    border: solid 3px blueviolet;
 }
 
-.bello a {
+.bello p a {
     background-color: black;
 }
-
