--- a/Hosea_style.css
+++ b/Hosea_style.css
@@ -1,5 +1,6 @@
 .hosea_intro_con {
     background-color: aqua;
+    transition:ease-in;
     width: 600px;
     border-color: blueviolet;
     border-style: solid;
@@ -10,4 +11,8 @@
     background-color: rgb(18, 255, 160);
    
     
+}
+
+.hosea_age {
+font-size: 40px;
 }
