Changed the name of ids and classes

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-.bello {
+.danielbello {
     background-color: bisque;
     width: 800px;
-    border: solid 3px blueviolet;
+    border: solid 3px brown;
 }
 
-.bello p a {
+.danielbello p a {
     background-color: black;
 }
