--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .intro_marvin_con {
     background-color:lightpink;
-    width: 80%;
+    width: 500px;
     border: 5px solid;
     border-color: chartreuse;
 }
 .intro_marvin_con.a {
   background-color: lightgreen;
 }
-.name_age_con {
+.marvin_age_con {
     color: lightblue;
 }
